--- a/app.json
+++ b/app.json
@@ -21,13 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./app/assets/adaptive-icon.png",
+        "foregroundImage": "./app/assets/FullLogo.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.rwells.NasaFT_TriviaV1"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./app/assets/FullLogo.png"
     },
     "extra": {
       "eas": {
