--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "scheme": "walletconnect-example",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/FullLogo75A.png",
+    "icon": "./app/assets/FullLogo1.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./app/assets/FullLogo.png",
@@ -21,13 +21,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./app/assets/FullLogo75A.png",
+        "foregroundImage": "./app/assets/FullLogo1.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.rwells.NasaFT_TriviaV1"
     },
     "web": {
-      "favicon": "./app/assets/FullLogo75A.png"
+      "favicon": "./app/assets/FullLogo1.png"
     },
     "extra": {
       "eas": {
